--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,8 +25,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="16dp"
-                android:text="Welcome Back"
-                android:textSize="24sp"
+                android:text="Welcome Back!"
+                android:textSize="28sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -35,9 +35,9 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/welcomeTxt"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="4dp"
-                android:text="Today's Task"
-                android:textSize="28sp"
+                android:layout_marginTop="6dp"
+                android:text="Tasks"
+                android:textSize="24sp"
                 android:textStyle="bold" />
 
             <LinearLayout
@@ -112,9 +112,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="16dp"
-        android:backgroundTint="@color/black"
+        android:backgroundTint="@color/mainBackgroundColor"
         android:text="Add Task"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="18sp"
         android:textStyle="bold"
         app:icon="@drawable/ic_add_circle"
